comit for chrome

--- a/Configurations/Project.Properties
+++ b/Configurations/Project.Properties
@@ -1,4 +1,4 @@
-CurrentBrowser=Firefox
+CurrentBrowser=Chrome
 FirefoxDriverPath=./\\Drivers\\geckodriver.exe
 ChromeDriverPath=./\\Drivers\\chromedriver.exe
 FirefoxInstallPath=C:\\Program Files\\Mozilla Firefox\\firefox.exe
