--- a/Configurations/Project.Properties
+++ b/Configurations/Project.Properties
@@ -10,3 +10,6 @@ LogOutUrl=http://localhost:4200/#/login
 PassWord=Admin2019
 ScreenShots=F:\\FailedTestsScreenshots\\
 PassScreenShot=F:\\TestScreenshots\\
+DatabaseHost=RND-BASE-A\\SQL_2017
+DatabaseUser=auto
+DatabasePassword=password123
