--- a/Configurations/Project.Properties
+++ b/Configurations/Project.Properties
@@ -4,6 +4,7 @@ ChromeDriverPath=./\\Drivers\\chromedriver.exe
 FirefoxInstallPath=C:\\Program Files\\Mozilla Firefox\\firefox.exe
 ChromeInstallPath=C:\\Program Files (x86)\\Google\\Chrome\\Application\\chrome.exe
 ExcelPath=./\\TestData\\SampleData.xlsx
+DrillBackServ=cogsdrillback://DGPB/?Db=SQL_2017&Srv=RND-BASE-A&Cmp=TWO&
 UserName=Admin
 PortalUrl=http://localhost:4200/
 LogOutUrl=http://localhost:4200/#/login
