--- a/Configurations/Project.Properties
+++ b/Configurations/Project.Properties
@@ -14,3 +14,8 @@ PassScreenShot=F:\\TestScreenshots\\
 DatabaseHost=RND-BASE-A\\SQL_2017
 DatabaseUser=auto
 DatabasePassword=password123
+DatabaseName =[TWO]
+DatabaseLocation = 'F:\\TestDBBackup\\TWODB.Bak'
+ApiDatabaseName =[CSM_API]
+ApiDatabaseLocation = 'F:\\TestDBBackup\\CSM_APIDB.Bak'
+ConnectionStringServ = jdbc:sqlserver://RND-BASE-A\\SQL_2017;DB= databaseName=master;user=sa;password=cogs;
