--- a/Configurations/Project.Properties
+++ b/Configurations/Project.Properties
@@ -10,7 +10,7 @@ PortalUrl=http://localhost:4200/
 LogOutUrl=http://localhost:4200/#/login
 PassWord=Admin2019
 ScreenShots=F:\\FailedTestsScreenshots\\
-PassScreenShot=F:\\TestScreenshots\\
+PassScreenShot=F:\\ExecutionTestScreenshots\\
 DatabaseHost=RND-BASE-A\\SQL_2017
 DatabaseUser=auto
 DatabasePassword=password123
