--- a/Configurations/Project.Properties
+++ b/Configurations/Project.Properties
@@ -19,3 +19,4 @@ DatabaseName =[TWO]
 DatabaseLocation ='D:\\CogsdaleWorkSpace\\BitBucket\\portal_test_automation\\CompanyDataBackup\\TWODB.Bak'
 ConnectionStringServ = jdbc:sqlserver://RND-BASE-A\\SQL_2017;DB= databaseName=master;user=sa;password=cogs;
 ConnectionStringServTWO = jdbc:sqlserver://RND-BASE-A\\SQL_2017;DB= databaseName=TWO;user=auto;password=password123;
+ConnectionStringServDynamics = jdbc:sqlserver://RND-BASE-A\\SQL_2017;DB= databaseName=Dynamics;user=auto;password=password123;
